force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <label>Subscription</label>
    <pluralLabel>Subscriptions</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Subscription Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Total_CO2_Saved__c</fullName>
        <label>Total CO2 Saved</label>
        <type>Number</type>
        <precision>10</precision>
        <scale>2</scale>
    </fields>
</CustomObject>