force-app/main/default/objects/Subscription__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <type>Currency</type>
    <precision>10</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>