force-app/main/default/objects/Subscription__c/fields/Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Plan_Type__c</fullName>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>