force-app/main/default/objects/Subscription__c/fields/Total_CO2_Saved__c.field-meta.xml
<CustomField>
    <fullName>Total_CO2_Saved__c</fullName>
    <label>Total CO2 Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>